cncProd/force-app/main/default/objects/EmailRecipient__mdt/EmailRecipient__mdt.object-meta.xml
<CustomObject>
    <description>Email Recipients for Specific Events</description>
    <label>Email Recipient</label>
    <pluralLabel>Email Recipients</pluralLabel>
</CustomObject>