cncProd/force-app/main/default/objects/EmailRecipient__mdt/fields/IsCC__c.field-meta.xml
<CustomField>
    <fullName>IsCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient in CC?</description>
    <label>Is CC</label>
    <type>Checkbox</type>
</CustomField>