cncProd/force-app/main/default/objects/EmailRecipient__mdt/fields/IsRecipient__c.field-meta.xml
<CustomField>
    <fullName>IsRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Email the Main Recipient?</description>
    <label>Is Recipient</label>
    <type>Checkbox</type>
</CustomField>