cncProd/force-app/main/default/objects/EmailRecipient__mdt/fields/RecipientEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>RecipientEmailAddress__c</fullName>
    <description>Email Address of the Recipient</description>
    <inlineHelpText>Email Address of the Recipient</inlineHelpText>
    <label>Recipient Email Address</label>
    <type>Email</type>
</CustomField>