cncProd/force-app/main/default/objects/EmailRecipient__mdt/listViews/WarehouseCCEmails.listView-meta.xml
<ListView>
    <fullName>WarehouseCCEmails</fullName>
    <columns>MasterLabel</columns>
    <columns>EventType__c</columns>
    <columns>DeveloperName</columns>
    <columns>RecipientEmailAddress__c</columns>
    <columns>IsBCC__c</columns>
    <columns>IsCC__c</columns>
    <columns>IsRecipient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>WarehouseCC</value>
    </filters>
    <label>Warehouse CC Emails</label>
</ListView>